kubernetes/kong/gateway-class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: proxy
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
         from: All
    hostname: "api-nextdestiny.rdsolutions.digital"
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: api-digital-tls
